--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-maps": "^9.4.5",
     "react-js-loader": "^0.1.0",
     "react-router-dom": "^5.3.0",
     "react-router-scroll-top": "^0.2.1",
